add small projects

--- a/index.html
+++ b/index.html
@@ -3,9 +3,25 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Jane's Portfolio</title>
 </head>
 <body>
   <p>Hello World</p>
+  <header>header</header>
+  <nav>
+    <ul>
+      <li class="nav">about Jane</li>
+      <li class="nav">Skills</li>
+      <li class="nav">Projects</li>
+      <li class="nav">Contact</li>
+    </ul>
+  </nav>
+  <section>
+    <article>about Jane</article>
+    <article>skills</article>
+    <article>slide</article>
+    <article>description</article>
+  </section>
+  <footer>Contact</footer>
 </body>
 </html>
