--- a/index.html
+++ b/index.html
@@ -1,27 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Jane's Portfolio</title>
-</head>
-<body>
-  <p>Hello World</p>
-  <header>header</header>
-  <nav>
-    <ul>
-      <li class="nav">about Jane</li>
-      <li class="nav">Skills</li>
-      <li class="nav">Projects</li>
-      <li class="nav">Contact</li>
-    </ul>
-  </nav>
-  <section>
-    <article>about Jane</article>
-    <article>skills</article>
-    <article>slide</article>
-    <article>description</article>
-  </section>
-  <footer>Contact</footer>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <title>Jane's Portfolio</title>
+  </head>
+  <body>
+    <header>
+      <div class="intro">Frontend Developer Jane</div>
+    </header>
+    <nav>
+      <ul class="nav-list">
+        <li class="nav">About</li>
+        <li class="nav">Skills</li>
+        <li class="nav">Projects</li>
+        <li class="nav">Resume</li>
+        <li class="nav">Contact</li>
+      </ul>
+    </nav>
+
+    <section class="main">
+      <article class="about">
+        <div>
+          <h1>About Me</h1>
+          <p>hello</p>
+        </div>
+      </article>
+
+      <article class="projects">
+        <h1>My Projects</h1>
+        <p>Some things I've Built in so far</p>
+        <div class="js-projects">
+          <p>Small JS Projects</p>
+          <a href="./learning-js-02/todo.html" class="js-project">Todolist</a>
+          <a href="./learning-js-02/tic-tac-toe.html" class="js-project"
+            >tic-tac-toe</a
+          >
+          <a href="./learning-js-02/slider.html" class="js-project">slider</a>
+          <a href="./learning-js-02/final.html" class="js-project">form</a>
+          <a href="./learning-js-02/threeDiv.html" class="js-project"
+            >threeDiv</a
+          >
+          <a href="./learning-js-02/lockedThreeSquare.html" class="js-project"
+            >lockedThreeSquare</a
+          >
+          <a href="./learning-js-02/11-02-thursday.html" class="js-project"
+            >guessmynumber1</a
+          >
+          <a href="./learning-js-02/guess.num.html" class="js-project"
+            >guessmynumber2</a
+          >
+          <a href="./learning-js-02/jquery/index.html" class="js-project"
+            >DataTable</a
+          >
+        </div>
+
+        <div class="OTT">
+          <p>Streaming service page</p>
+          <a href="#">Netflix</a>
+        </div>
+      </article>
+
+      <article>skills</article>
+
+      <article class="resume">
+        <h1>My resume</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        <button>Download here</button>
+      </article>
+    </section>
+    <footer class="footer">
+      <p>Contact</p>
+      <div class="contacts">
+        <div class="contact">
+          <a href="#"><img src="./images/email.png" alt="1" /></a>
+        </div>
+        <div class="contact">
+          <a href="#"><img src="./images/github-[#142].png" alt="1" /></a>
+        </div>
+        <div class="contact">
+          <a href="#"><img src="./images/Linkedin.png" alt="1" /></a>
+        </div>
+      </div>
+    </footer>
+  </body>
 </html>
