--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <body>
     <div class="wrap">
       <!-- 메인 -->
+      <!-- test -->
       <main>
         <div class="skills">
           <div class="inner">
