index file edited

--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
                   </ul>
                   <div class="btn_area">
                     <a
-                      href="https://sign-up-page-bice.vercel.app/"
+                      href="https://github.com/janehyun03/sign-up-page"
                       target="_blank"
                       class="btn_goto"
                       >GoTo</a
@@ -365,37 +365,13 @@
                     <tbody>
                       <tr>
                         <td headers="col1">
-                          <span class="category html">HTML</span>
-                        </td>
-                        <td headers="col2">
-                          <a
-                            href="https://github.com/janehyun03"
-                            target="_blank"
-                            >index.html</a
-                          >
-                        </td>
-                      </tr>
-                      <tr>
-                        <td headers="col1">
-                          <span class="category css">CSS</span>
+                          <span class="category html">Next.js</span>
                         </td>
                         <td headers="col2">
                           <a
                             href="https://github.com/janehyun03/sign-up-page"
                             target="_blank"
-                            >tailwind css</a
-                          >
-                        </td>
-                      </tr>
-                      <tr>
-                        <td headers="col1">
-                          <span class="category js">JS</span>
-                        </td>
-                        <td headers="col2">
-                          <a
-                            href="https://github.com/janehyun03"
-                            target="_blank"
-                            >Next.js</a
+                            >Github Page</a
                           >
                         </td>
                       </tr>
