--- a/index.html
+++ b/index.html
@@ -281,7 +281,13 @@
               </li>
               <li>
                 <div class="img_area">
-                  <img src="images/img_portfolio9.png" alt="" />
+                  <a
+                    href="https://janehyun03.github.io/small-games/tic-tac-toe.html"
+                    target="_blank"
+                    class="btn_goto"
+                  >
+                    <img src="images/img_portfolio8.png" alt=""
+                  /></a>
                 </div>
                 <div class="portfolio_cont">
                   <h3>
@@ -289,7 +295,7 @@
                     Tic Tac Toe
                   </h3>
                   <p class="summary">
-                    리액트를 학습하며 제작한 데스크탑 페이지입니다.<br /><br />
+                    JavaScript를 학습하며 제작한 데스크탑 페이지입니다.<br /><br />
                   </p>
                   <ul class="point">
                     <li>
