add a wordpress project

--- a/index.html
+++ b/index.html
@@ -89,6 +89,150 @@
           <div class="inner">
             <h2><span>Portfolio</span></h2>
             <ol class="portfolio_list">
+              <!-- travelog -->
+              <li>
+                <div class="img_area">
+                  <a href="http://34.228.64.106/"
+                    ><img src="images/img_portfolio2.png" alt=""
+                  /></a>
+                </div>
+                <div class="portfolio_cont">
+                  <h3>
+                    <span class="num_portfolio">05</span>
+                    Traveler Jane Blog page
+                  </h3>
+                  <p class="summary">
+                    This is a Travel blog created for portfolio.
+                  </p>
+                  <ul class="point">
+                    <li>
+                      <span>WordPress</span>
+                    </li>
+                    <li>
+                      <span
+                        >대표 CMS인 WordPress를 이용하여 만든 트레블
+                        블로그</span
+                      >
+                    </li>
+                  </ul>
+                  <div class="btn_area">
+                    <a
+                      href="http://34.228.64.106/"
+                      target="_blank"
+                      class="btn_goto"
+                      >GoTo</a
+                    >
+                  </div>
+                  <table class="file_link">
+                    <thead>
+                      <tr>
+                        <th id="col1">Category</th>
+                        <th id="col2">Source (click!)</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr>
+                        <td headers="col1">
+                          <span class="category html">HTML</span>
+                        </td>
+                        <td headers="col2">
+                          <a
+                            href="https://github.com/janehyun03"
+                            target="_blank"
+                            >index.html</a
+                          >
+                        </td>
+                      </tr>
+                      <tr>
+                        <td headers="col1">
+                          <span class="category css">CSS</span>
+                        </td>
+                        <td headers="col2">
+                          <a
+                            href="https://github.com/janehyun03"
+                            target="_blank"
+                            >common.css</a
+                          >
+                        </td>
+                      </tr>
+                      <tr>
+                        <td headers="col1">
+                          <span class="category js">JS</span>
+                        </td>
+                        <td headers="col2">
+                          <a
+                            href="https://github.com/janehyun03"
+                            target="_blank"
+                            >common.js</a
+                          >
+                        </td>
+                      </tr>
+                    </tbody>
+                  </table>
+                </div>
+              </li>
+              <!-- signup page -->
+              <li>
+                <div class="img_area">
+                  <a
+                    href="https://sign-up-page-bice.vercel.app/"
+                    target="_blank"
+                  >
+                    <img src="images/img_portfolio1.png" alt=""
+                  /></a>
+                </div>
+                <div class="portfolio_cont">
+                  <h3>
+                    <span class="num_portfolio">02</span>
+                    Sign up Form
+                  </h3>
+                  <p class="summary">
+                    This is a Sign up Form created for portfolio.
+                  </p>
+                  <ul class="point">
+                    <li>
+                      <span>Next.js</span>
+                    </li>
+                  </ul>
+                  <div class="btn_area">
+                    <a
+                      href="https://github.com/janehyun03/sign-up-page"
+                      target="_blank"
+                      class="btn_goto"
+                      >GoTo</a
+                    >
+                  </div>
+                  <table class="file_link">
+                    <thead>
+                      <tr>
+                        <th id="col1">Category</th>
+                        <th id="col2">Source (click!)</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr>
+                        <td headers="col1">
+                          <span class="category next">
+                            <img
+                              class="category svg"
+                              src="https://camo.githubusercontent.com/9e98fa0ea1973836a885b4f982165fbbc592036fcc2ad860c41c68260beb8dd2/68747470733a2f2f63646e2e6a7364656c6976722e6e65742f67682f64657669636f6e732f64657669636f6e406c61746573742f69636f6e732f6e6578746a732f6e6578746a732d6f726967696e616c2e737667"
+                            />
+                            next</span
+                          >
+                        </td>
+                        <td headers="col2">
+                          <a
+                            href="https://github.com/janehyun03/sign-up-page"
+                            target="_blank"
+                            >Github Page</a
+                          >
+                        </td>
+                      </tr>
+                    </tbody>
+                  </table>
+                </div>
+              </li>
+              <!-- netflix landing page -->
               <li>
                 <div class="img_area">
                   <a href="./video/index.html" target="_blank" class="btn_goto">
@@ -97,7 +241,7 @@
                 </div>
                 <div class="portfolio_cont">
                   <h3>
-                    <span class="num_portfolio">01</span>
+                    <span class="num_portfolio">03</span>
                     Netflix lending page
                   </h3>
                   <p class="summary">
@@ -167,66 +311,7 @@
                   </table>
                 </div>
               </li>
-              <li>
-                <div class="img_area">
-                  <a
-                    href="https://sign-up-page-bice.vercel.app/"
-                    target="_blank"
-                  >
-                    <img src="images/img_portfolio1.png" alt=""
-                  /></a>
-                </div>
-                <div class="portfolio_cont">
-                  <h3>
-                    <span class="num_portfolio">02</span>
-                    Sign up Form
-                  </h3>
-                  <p class="summary">
-                    This is a Sign up Form created for portfolio.
-                  </p>
-                  <ul class="point">
-                    <li>
-                      <span>Next.js</span>
-                    </li>
-                  </ul>
-                  <div class="btn_area">
-                    <a
-                      href="https://github.com/janehyun03/sign-up-page"
-                      target="_blank"
-                      class="btn_goto"
-                      >GoTo</a
-                    >
-                  </div>
-                  <table class="file_link">
-                    <thead>
-                      <tr>
-                        <th id="col1">Category</th>
-                        <th id="col2">Source (click!)</th>
-                      </tr>
-                    </thead>
-                    <tbody>
-                      <tr>
-                        <td headers="col1">
-                          <span class="category next">
-                            <img
-                              class="category svg"
-                              src="https://camo.githubusercontent.com/9e98fa0ea1973836a885b4f982165fbbc592036fcc2ad860c41c68260beb8dd2/68747470733a2f2f63646e2e6a7364656c6976722e6e65742f67682f64657669636f6e732f64657669636f6e406c61746573742f69636f6e732f6e6578746a732f6e6578746a732d6f726967696e616c2e737667"
-                            />
-                            next</span
-                          >
-                        </td>
-                        <td headers="col2">
-                          <a
-                            href="https://github.com/janehyun03/sign-up-page"
-                            target="_blank"
-                            >Github Page</a
-                          >
-                        </td>
-                      </tr>
-                    </tbody>
-                  </table>
-                </div>
-              </li>
+
               <li>
                 <div class="img_area">
                   <img src="images/img_portfolio10.png" alt="" />
@@ -279,6 +364,8 @@
                   </table>
                 </div>
               </li>
+
+              <!-- tic-tac-toe -->
               <li>
                 <div class="img_area">
                   <a
@@ -291,7 +378,7 @@
                 </div>
                 <div class="portfolio_cont">
                   <h3>
-                    <span class="num_portfolio">04</span>
+                    <span class="num_portfolio">05</span>
                     Tic Tac Toe
                   </h3>
                   <p class="summary">
@@ -332,85 +419,6 @@
                             href="https://github.com/janehyun03"
                             target="_blank"
                             >Github Page</a
-                          >
-                        </td>
-                      </tr>
-                    </tbody>
-                  </table>
-                </div>
-              </li>
-
-              <li>
-                <div class="img_area">
-                  <img src="images/img_portfolio2.png" alt="" />
-                </div>
-                <div class="portfolio_cont">
-                  <h3>
-                    <span class="num_portfolio">05</span>
-                    Traveler Jane Blog page
-                  </h3>
-                  <p class="summary">
-                    This is a Travel blog created for portfolio.
-                  </p>
-                  <ul class="point">
-                    <li>
-                      <span>바닐라 자바스크립트</span>
-                    </li>
-                    <li>
-                      <span
-                        >퍼센트(%) 값을 이용한 컨텐츠의 유동적인 크기 설정</span
-                      >
-                    </li>
-                  </ul>
-                  <div class="btn_area">
-                    <a
-                      href="https://janehyun03.github.io/"
-                      target="_blank"
-                      class="btn_goto"
-                      >GoTo</a
-                    >
-                  </div>
-                  <table class="file_link">
-                    <thead>
-                      <tr>
-                        <th id="col1">Category</th>
-                        <th id="col2">Source (click!)</th>
-                      </tr>
-                    </thead>
-                    <tbody>
-                      <tr>
-                        <td headers="col1">
-                          <span class="category html">HTML</span>
-                        </td>
-                        <td headers="col2">
-                          <a
-                            href="https://github.com/janehyun03"
-                            target="_blank"
-                            >index.html</a
-                          >
-                        </td>
-                      </tr>
-                      <tr>
-                        <td headers="col1">
-                          <span class="category css">CSS</span>
-                        </td>
-                        <td headers="col2">
-                          <a
-                            href="https://github.com/janehyun03"
-                            target="_blank"
-                            >common.css</a
-                          >
-                        </td>
-                      </tr>
-                      <tr>
-                        <td headers="col1">
-                          <span class="category js">JS</span>
-                        </td>
-                        <td headers="col2">
-                          <a
-                            href="https://github.com/janehyun03"
-                            target="_blank"
-                            >common.js</a
                           >
                         </td>
                       </tr>
